src/stylesheets/style.scss
/* ... */
.staging-container-text {
  margin-left: 0.5em;
  margin-right: 0.5em;
}
*/
.scroll-selection-indicator {
  background-color: $aux-color;
  height: 100%;
  width: 5px;
}

.ui-resizable-handle {
  width: 8px;
}

.ui-resizable-handle:hover {
  background-color: $inactive-color;
  cursor: col-resize;
}


.menu-symbol-facet {
	position:relative;
	display:inline-block;
	background-color:$pane-bg-color;
	width: 12px;
	height: 12px;
	margin-right:4px;
	font-size: 10px;
	text-align:center;
	vertical-align: middle;
	font-weight:bold;
	color: #fff;
	line-height:12px;
	margin-bottom:4px;
}

.overlay-container {
  display:flex;
  position: absolute;
  width: 100vw;
  height: 100vh;
}

.overlay-dialog {
	display:none;
	position:fixed;
	background-color: #fff;
	color: #000;

	top: 10vh;
	left: 10vw;

	width: 80vw;
	max-height: 80vh;
	box-shadow: 0px 0px 20px $pane-bg-color;
	border-width: 1px;
	border-style: solid;
	border-color: $pane-bg-color-dark;
	padding: 30px;
	z-index: 10;
	overflow:auto;
}

.overlay-dialog-close-btn {
	float:right;
	font-size: 24px;
	margin-top: -20px;
	margin-right: -20px;
}

.overlay-dialog-close-btn:hover {
	cursor:pointer;
	color: $aux-color;
}

#logo-section {
	margin-top: 20px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.about-section-logo {
	height: 100px;
	margin-right: 20px;
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.about-section-logo:hover {
	opacity: 0.8;
}

.viewstate-input {
	width: 100%;
}

#viewstate-key, #viewstate-url {
	font-weight:bold;
}

#viewstate-load-list {
	margin-top: 0px;
  width: 100%;
  margin-bottom: 20px;
}

.viewstate-load-item-header {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: auto;
  width: 100%;
  font-weight: bold;
  font-size: 1.0rem;
  margin-bottom:5px;
  grid-column-gap: 20px;
}

.viewstate-load-item {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: auto;
  width: 100%;
  grid-column-gap: 20px;
}

.viewstate-load-item:hover {
  background-color: $pane-bg-color;
  cursor:pointer;
  font-weight: bold;
}

.viewstate-delete-btn:hover {
  color: $aux-color;
}

.viewstate-dialog {
  display:grid;
  grid-template-columns: [left] 1fr [right] 0.2fr;
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
}

.viewstate-dialog > button {
	margin-top: 20px;
	max-width: 10%;
	min-width: 80px;
	max-height: 10%;
	min-height: 45px;
	font-size: 20px;
}

.viewstate-dialog > h1 {
	margin-top:0px;
}

#viewstate-save-btn {
  display:none; //Hidden by default, shown when logged in
  width: 120px;
  height: 35px;
  background: $aux-color;
  border: 1px solid #ccc;
  color: #fff;
  font-weight: bold;
  cursor: pointer;
  margin-top:10px;
}

#viewstate-save-input {
  display:none; //Hidden by default, shown when logged in
}

#settings-menu-label {

}
#settings-menu-label-icon {
	background-image: url('../assets/settings.svg');
	background-repeat: no-repeat;
	background-position: top left;
    color: #fff;
}


#result-table {
	display:none;
}

.facet-text-search-btn {
	display:none;
}

.facet-no-data-msg {
	display:none;
	position:absolute;
  top: 0;
  left: 0;
	font-size: 1.0em;
	color: #aaa;
	text-align:center;
	padding-top:0px;
	height:100%;
	width:100%;
}
/*
#splash-screen {
	position:fixed;
	background-color: #fff;
	background-image: url('/src/assets/sead-logo-white.png');
	background-repeat: no-repeat;
	background-position: center;
	width: 100vw;
	height: 100vh;
	z-index: 1000;
}
*/


.loading-indicator {
  display:none;
  position:absolute;
  left: calc(50% - 150px);
  top: calc(50% - 150px);
  width: 300px;
  height: 300px;
  z-index: 100;
  background-image: url('../assets/loading-indicator4.svg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  /*background-color: rgba(127, 127, 127, 0.5);*/
  /*border-radius: 50%;*/
}

.local-loading-indicator {
  display:none;
  left: calc(50% - 150px);
  top: calc(50% - 150px);
  width: 300px;
  height: 300px;
  z-index: 100;
  background-image: url('../assets/loading-indicator4.svg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  /*background-color: rgba(127, 127, 127, 0.5);*/
  border-radius: 50%;
}

.result-loading-indicator-error {
	background-color: rgba(255, 0, 0, 0.65) !important;
}

.tabulator-row:hover {
	background-color: rgba(0, 0, 100, 0.25) !important;
	color: #000 !important;
}

.notifyjs-wrapper {
}

.notifyjs-container {
}

.notifyjs-bootstrap-base {
	font-size: 14px;
  	font-family: $normal-font;
  	font-weight: normal;
	border-radius: 0px;
	color: #000;
	border-color: $inactive-color;
	border-width: 2px;
	z-index: 20 !important;
	padding-top:4px !important;
}

.notifyjs-bootstrap-info {
  background-color: #fff;
  background-image: none;
  border-color: $inactive-color;
  padding: 5px;
  padding-top: 2px;
}

.notifyjs-bootstrap-warn {
  background-color: $warning-color;
  background-image: none;
  border-color: $inactive-color;
  padding: 5px;
}

.notifyjs-bootstrap-error {
  background-color: $error-color;
  background-image: none;
  border-color: $inactive-color;
  padding: 5px;
}


#menu-help-state-indicator {
	background-color: rgba(255, 255, 255, 0.6);
	padding-left: 8px;
	padding-right: 8px;
	color: #000 !important;
	border-width: 0px;
	border-style: solid;
	border-color: #000;
	border-radius: 0px;
}

#result-nodatamsg-container {
	display:grid;
	grid-template-columns: 100px auto 100px;
	grid-template-rows: 100px auto 100px;
}

.result-info-text {
	font-size: 50px;
	font-weight: bold;
	color: $inactive-color;
	grid-column-start: 2;
	grid-column-end: 2;
	grid-row-start: 2;
	grid-row-end: 2;
	justify-self: center;
	align-self: center;
	text-align: center;
}

#no-data-container {

}

#result-info-text-container {
	text-align: center;
	padding-left: 100px;
	padding-right: 100px;
}

.large-info-text {
	font-size: 60px;
	color: $inactive-color;
  margin-bottom:20px;
}
/* ... */

